--- a/booksdb/appsettings.json
+++ b/booksdb/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "bookproject": "Server = (localdb)\\MSSQLLocalDB; Database = bookprojectDB; MultipleActiveResultSets = true;"
+    "bookproject": "Data Source = booksdb.sqlite"
   }
 }
